# openapi-to-sila2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: mapping_reference.md
examples/: .env.example  README.md
examples/feature_declarations/: AuthenticationFeature.xml  InstrumentsFeature.xml  ObservableFeature.xml
examples/feature_implementations/: authenticationfeature_impl.py  instrumentsfeature_impl.py  observablefeature_impl.py
examples/mock_api/: main.py  openapi.json  pyproject.toml
examples/mock_api/routes/: __init__.py  _instruments.py  _login.py  _observable.py
examples/mock_api/schemas/: __init__.py  instruments.py  types.py
examples/mock_api/services/: __init__.py  _instrument_service.py  _login_service.py
examples/proxy_client/: __main__.py  client.py
examples/proxy_server/: __main__.py  server.py
src/openapi_to_sila2/: __init__.py  class_generator.py  cli.py  fdl_generator.py  lossy_scan.py  validation.py
src/openapi_to_sila2/schemas/: Constraints.xsd  DataTypes.xsd  FeatureDefinition.xsd
tests/: conftest.py  test_class_generation.py  test_class_generator_topo.py  test_exclusive_bounds.py  test_fdl_generation.py  test_fdl_identifier_resolution.py  test_header_metadata.py  test_lossy_scan.py  test_non_json_bodies.py  test_openapi_normalization.py  test_per_status_errors.py  test_polymorphism.py  test_recursive_ref.py  test_sse_observable.py  test_string_formats.py  test_validation.py
tests/fixtures/expected_fdl/: test1_output.xml  test2_output.xml  test3_output.xml  test4_output.xml  test5_output.xml
tests/fixtures/expected_python/: test1_output.py  test2_output.py  test3_output.py  test4_output.py
tests/fixtures/openapi/: empty_paths.json  partially_tagged.json  test1.json  test2.json  test3.json  test4.json  test5.json  untagged_simple.json  untagged_versioned.json
tests/fixtures/proto/: test1.proto  test2.proto  test3.proto  test4.proto
